Remove nav margin to fix white gap

--- a/app/assets/stylesheets/task-show.css
+++ b/app/assets/stylesheets/task-show.css
@@ -22,6 +22,7 @@ html body.tasks.show header {
 html body.tasks.show header nav {
   max-width: 100% !important;
   width: 100% !important;
+  margin: 0 !important;
 }
 
 html body.tasks.show header nav ul {
